--- a/02_neural_network_classification_with_tensorflow_video.ipynb
+++ b/02_neural_network_classification_with_tensorflow_video.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPNzeDLN+71Uf7dkpkOK0f4",
+      "authorship_tag": "ABX9TyMMX+IwO9IVGWMzCJ93z9sf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6336,10 +6336,268 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Evaluating our multi-class classification model\n",
+        "\n",
+        "To evaluate our multi-class classification model we could:\n",
+        "* Evaluate its performance using other classification metrics (such as a confusion matrix)\n",
+        "* Access some of its predictions (throught visualizations)\n",
+        "* Improve its results (by training it longer or changing the architecture)\n",
+        "* Save and export it for use in an application.\n",
+        "\n",
+        "Let's go through the top 2..."
+      ],
+      "metadata": {
+        "id": "xrsu56it1LAa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create a confusion matrix\n",
+        "import itertools\n",
+        "from sklearn.metrics import confusion_matrix\n",
+        "\n",
+        "def make_confusion_matrix(y_true, y_pred, classes=None, figsize=(10, 10), text_size=15, norm=False, savefig=False):\n",
+        "\n",
+        "  # Create the confusion matrix\n",
+        "  cm = confusion_matrix(y_true, y_pred)\n",
+        "  cm_norm = cm.astype(\"float\") / cm.sum(axis=1)[:, np.newaxis] # normalize our confusion matrix\n",
+        "  n_classes = cm.shape[0]\n",
+        "\n",
+        "  # Let's make it look good\n",
+        "  fig, ax = plt.subplots(figsize=figsize)\n",
+        "  # Create a matrix plot\n",
+        "  cax = ax.matshow(cm, cmap=plt.cm.Blues)\n",
+        "  fig.colorbar(cax)\n",
+        "\n",
+        "  # Set labels to be classes\n",
+        "  if classes:\n",
+        "    labels = classes\n",
+        "  else:\n",
+        "    labels = np.arange(cm.shape[0])\n",
+        "\n",
+        "  # Label the axes\n",
+        "  ax.set(title=\"Confusion Matrix\",\n",
+        "        xlabel=\"Predicted label\",\n",
+        "        ylabel=\"True label\",\n",
+        "        xticks=np.arange(n_classes),\n",
+        "        yticks=np.arange(n_classes),\n",
+        "        xticklabels=labels,\n",
+        "        yticklabels=labels)\n",
+        "\n",
+        "  # Set x-axis labels to bottom\n",
+        "  ax.xaxis.set_label_position(\"bottom\")\n",
+        "  ax.xaxis.tick_bottom()\n",
+        "\n",
+        "  # Adjust label size\n",
+        "  ax.yaxis.label.set_size(text_size)\n",
+        "  ax.xaxis.label.set_size(text_size)\n",
+        "  ax.title.set_size(text_size)\n",
+        "\n",
+        "  # Set the threshold for different colours\n",
+        "  threshold = (cm.max() + cm.min()) / 2.\n",
+        "\n",
+        "  # Plot the text on each cell\n",
+        "  for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
+        "    plt.text(j, i, f\"{cm[i, j]} ({cm_norm[i, j]*100:.1f}%)\",\n",
+        "            horizontalalignment=\"center\",\n",
+        "            color=\"white\" if cm[i, j] > threshold else \"black\",\n",
+        "            size=text_size)"
+      ],
+      "metadata": {
+        "id": "L0n-oId2x_3L"
+      },
+      "execution_count": 98,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class_names"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-wVGKQFZ5oXI",
+        "outputId": "1a0ab7c2-e2f3-48ff-b5af-1685f0d5ab54"
+      },
+      "execution_count": 99,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['T-shirt/top',\n",
+              " 'Trouser',\n",
+              " 'Pullover',\n",
+              " 'Dress',\n",
+              " 'Coat',\n",
+              " 'Sandal',\n",
+              " 'Shirt',\n",
+              " 'Sneaker',\n",
+              " 'Bag',\n",
+              " 'Ankle boot']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 99
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Make some predictions with our model\n",
+        "y_probs = model_14.predict(test_data_norm) # probs is short for \"predictions probabilities\"\n",
+        "\n",
+        "# View the first 5 predictions\n",
+        "y_probs[:5]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FaWwy4Pp5rVI",
+        "outputId": "ee44b375-9bc0-4305-d42f-84fbde06ddbe"
+      },
+      "execution_count": 106,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[6.6464895e-07, 1.6675128e-19, 1.9840166e-11, 4.1163894e-14,\n",
+              "        6.8985038e-19, 8.6503372e-02, 7.5413474e-11, 2.0007092e-01,\n",
+              "        3.5172288e-04, 7.1307319e-01],\n",
+              "       [7.4792840e-03, 2.2848061e-04, 8.0032945e-01, 7.0830371e-05,\n",
+              "        1.9663023e-02, 3.6298847e-04, 1.7170769e-01, 5.7731039e-13,\n",
+              "        1.5821772e-04, 1.2283114e-21],\n",
+              "       [1.4120718e-07, 9.9981046e-01, 7.5204696e-08, 6.9293688e-05,\n",
+              "        1.2005370e-04, 4.5539762e-21, 1.9624457e-08, 1.9962793e-23,\n",
+              "        1.1128088e-11, 0.0000000e+00],\n",
+              "       [7.0366490e-08, 9.9974108e-01, 2.1773288e-09, 2.3841836e-04,\n",
+              "        2.0425401e-05, 2.2971508e-22, 2.7954679e-09, 4.6136842e-22,\n",
+              "        5.1702028e-12, 0.0000000e+00],\n",
+              "       [1.8296428e-01, 3.5728586e-03, 9.0253644e-02, 4.7213558e-02,\n",
+              "        4.3080825e-02, 1.7472340e-03, 6.2068242e-01, 3.3770894e-07,\n",
+              "        1.0484925e-02, 2.7778805e-13]], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 106
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "🔑 Note: Remember to make predictions on the same kind of data your model was trained on (e.g. if your model was trained on normalized data, you'll want to make predictions on normalized data)"
+      ],
+      "metadata": {
+        "id": "5dqxdlis6w1Z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_probs[0], tf.argmax(y_probs[0]), class_names[tf.argmax(y_probs[0])]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Wm_HiS5H5vwl",
+        "outputId": "28e4462b-9ff3-4341-ac10-0dd0e6b152f6"
+      },
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([6.6464895e-07, 1.6675128e-19, 1.9840166e-11, 4.1163894e-14,\n",
+              "        6.8985038e-19, 8.6503372e-02, 7.5413474e-11, 2.0007092e-01,\n",
+              "        3.5172288e-04, 7.1307319e-01], dtype=float32),\n",
+              " <tf.Tensor: shape=(), dtype=int64, numpy=9>,\n",
+              " 'Ankle boot')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 111
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Convert all of the predictions probabilities into integers\n",
+        "y_preds = y_probs.argmax(axis=1)\n",
+        "\n",
+        "# View the first 10 predictions labels\n",
+        "y_preds[:10]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zoKZtY3b6cPy",
+        "outputId": "a433a089-5f3b-4344-a8b6-765d392d72ae"
+      },
+      "execution_count": 112,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([9, 2, 1, 1, 6, 1, 4, 6, 5, 7])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 112
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_labels"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w1_YNUeT7PG4",
+        "outputId": "ba2e9c80-4bb9-4a42-9921-1e20d055e186"
+      },
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([9, 2, 1, ..., 8, 1, 5], dtype=uint8)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 113
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "L0n-oId2x_3L"
+        "id": "0yOx1hHi8KGN"
       },
       "execution_count": null,
       "outputs": []
